# eclogue

./: .gitignore  AGENTS.md  Cargo.toml  README.md  tools.md
eclogue-agent/: Cargo.toml
eclogue-agent/src/: error.rs  lib.rs  session.rs  tooling.rs
eclogue-agent/src/openai/: completions.rs  mod.rs  responses.rs  transport.rs  types.rs
eclogue-agent/src/tooling/: context.rs  mod.rs  protocol.rs  registry.rs
eclogue-agent/src/tooling/tools/: edit_file.rs  fetch_url.rs  get_diff.rs  list_files.rs  mod.rs  read_file.rs  run_command.rs  search_text.rs  stat_file.rs  util.rs
eclogue-example/: Cargo.toml
eclogue-example/src/: main.rs
