[package]
name = "eclogue-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3.31"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
