[package]
name = "eclogue-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
futures-util = "0.3.31"
globset = "0.4.18"
grep = "0.4.1"
html2text = "0.13.6"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
similar = "2.7.0"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["fs", "macros", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.17"
walkdir = "2.5.0"
